[package]
name = "ns-client"
version = "0.1.0"
edition = "2021"
authors = ["Luiz Otávio Cardi Vidoto <luiz.vidoto@hotmail.com>"]
description = "Client to handle NOSTR connections"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr = "0.22.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.19.0"
tungstenite = "0.19.0"
futures-util = "0.3.28"
thiserror = "1.0.40"
url = "2.3.1"
log = "0.4.0"

[workspace]
members = ["examples/*"]