[package]
name = "example_state_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ns-client = { path = "../../" }
tokio = { version = "1", features = ["full"] }
nostr = "0.22.0"
log = "0.4.0"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"